# binchew

./: .gitignore  devenv.nix  pyproject.toml
binchew/: __init__.py  hazmat.py  process.py  system.py  typing.py
binchew/_impl/: ffi.py
binchew/_impl/linux/: __init__.py  libc.py  ptrace.py  syscall.py
binchew/memory/: __init__.py  block.py  errors.py  layout.py  utils.py
binchew/os/: __init__.py  platform.py
binchew/os/process/: __init__.py  _linux.py  ffi.py  interface.py
binchew/process/: __init__.py  _linux.py
design/: memory.md  objects.md  process.md
